--- a/vignettes/gtfs2emis_fleet_data.Rmd
+++ b/vignettes/gtfs2emis_fleet_data.Rmd
@@ -128,8 +128,12 @@ fleet_data_ef_moves
 ```
 
 
+## Learn more
 
+Check out our extra guide:
 
-## Credits
+ - [Exploring Emission Factors](https://ipeagit.github.io/gtfs2emis/articles/gtfs2emis_emission_factor.html)
 
-The `gtfs2gps` package is developed by a team at the Institute for Applied Economic Research (IPEA) with collaboration from the National Institute for Space Research (INPE), both from Brazil. If you have any suggestions or want to report an error, please visit the package GitHub page ([link](https://github.com/ipeaGIT/gtfs2emis)).
+## Report a bug
+
+If you have any suggestions or want to report an error, please visit [the package GitHub page](https://github.com/ipeaGIT/gtfs2emis/issues).
