--- a/vignettes/gtfs2emis_intro_vignette.Rmd
+++ b/vignettes/gtfs2emis_intro_vignette.Rmd
@@ -182,7 +182,7 @@ names(emi_list)
 
 # 6 Analyzing emission estimates
 
-Sometimes, working with data stored in a long list can be tricky. For convenience, `gtfs2emis` package has a few functions to users analyze the these results and make. For example, you can use the `emis_to_dt()` function to convert the output of `emission_model()` from a `list` to a `data.table` format:
+Sometimes, working with data stored in a long list can be tricky. For convenience, gtfs2emis package has a few functions to help users analyze the results of emission estimates. For example, you can use the `emis_to_dt()` function to convert the output of `emission_model()` from a `list` to a `data.table` format:
 
 ```{r,eval = TRUE}
 emi_dt <- emis_to_dt(emi_list = emi_list,
