--- a/vignettes/gtfs2emis_emission_factor.Rmd
+++ b/vignettes/gtfs2emis_emission_factor.Rmd
@@ -15,11 +15,11 @@ knitr::opts_chunk$set(
   comment = "#>")
 ```
 
-Emission factors (EF) provides information on the mass of pollutants by traveled distance or engine power. In order to understand how the overall emissions are impacted by a given public transport network and vehicle fleet, it is useful to check the emission factors of an individual vehicle. This session helps users to explore the available EF data.
+Emission factors (EF) provide information on the mass of pollutants by traveled distance or engine power. To understand how the overall emissions are impacted by a given public transport network and vehicle fleet, it is useful to check the emission factors of an individual vehicle. This session helps users to explore the available EF data.
 
 ## Available functions
 
-`gtfs2emis` currently supports emission factor from four agencies databases, while detailed reports containing detailed information can be found in the websites:
+`gtfs2emis` currently supports emission factors from four agencies' databases, while detailed reports containing detailed information can be found on the websites:
 
 - Environment Company of São Paulo ---- [CETESB](https://cetesb.sp.gov.br/veicular/)
 - Environmental Protection Agency --- [MOVES3 Model](https://www.epa.gov/moves)
@@ -28,8 +28,8 @@ Emission factors (EF) provides information on the mass of pollutants by traveled
 
 ## Visualizing data
 
-Before checking EF graphically, user needs to select the desired emission factor function based on fleet characteristics — as shown in [Defining Fleet data vignette](https://ipeagit.github.io/gtfs2emis/articles/gtfs2emis_fleet_data.html).
-This section we will use `ef_europe_emep()` function to illustrate how emissions varies according to vehicle type, mean speed and pollutant.
+Before checking EF graphically, the user needs to select the desired emission factor function based on fleet characteristics — as shown in [Defining Fleet data vignette](https://ipeagit.github.io/gtfs2emis/articles/gtfs2emis_fleet_data.html).
+In this section we will use the `ef_europe_emep()` function to illustrate how emissions vary according to vehicle type, mean speed, and pollutant.
 
 ```{r}
 library(gtfs2emis)
@@ -61,7 +61,7 @@ ef_europe_dt <- emis_to_dt(emi_list = ef_europe
 head(ef_europe_dt)
 ```
 
-Plotting a the speed-dependent EF according to vehicle type (`veh_type`) and
+Plotting the speed-dependent EF according to vehicle type (`veh_type`) and
 euro standard (`euro`).
 
 ```{r, fig.height=4, fig.width=7}
@@ -77,7 +77,7 @@ ggplot(ef_europe_dt) +
   theme(legend.position = "bottom")
 ```
 
-In few situations in `ef_europe_emep()`, when the information of vehicle technology does not match the existing database, the package display a message mentioning the returned technology. User can either select an existing data for the combining variables (`euro`, `tech`, `veh_type` and `pollutant`), or accept the assumed change in vehicle technology.
+In a few situations in `ef_europe_emep()`, when the information on vehicle technology does not match the existing database, the package display a message mentioning the returned technology. Users can either select existing data for the combining variables (`euro`, `tech`, `veh_type`, and `pollutant`), or accept the assumed change in vehicle technology.
 
 ```{r}
 ef_europe_co2 <- ef_europe_emep(speed = units::set_units(10:100,"km/h")
@@ -107,14 +107,14 @@ The other EF functions, `ef_usa_emfac()`, `ef_usa_moves()` and `ef_brazil_cetesb
 
 ### Exploring Scaled Emission Factors
 
-One special case is of EF usage is the Scaled Emission Factors. In the databases provided by the package, CETESB (`ef_brazil_cetesb()`) methodology reports EF that are not dependent on speed. If one needs to scale or adjust the local EF in order to make them speed-dependent, the function `ef_scaled_euro()` can be applied. 
+One special case is of EF usage is the Scaled Emission Factors. In the databases provided by the package, CETESB (`ef_brazil_cetesb()`) methodology reports EF that are not dependent on speed. If one needs to scale or adjust the local EF to make them speed-dependent, the function `ef_scaled_euro()` can be applied. 
 
 The scaled emission factor is related to speed by the expression
 
 $$
 EF_{scaled} (V) = EF_{local} * \frac{EF_{euro}(V)}{EF_{euro}(SDC)}, 
 $$
-where $EF_{scaled}(V)$ is the scaled emission factors for each street link, 
+where $EF_{scaled}(V)$ is the scaled emission factor for each street link, 
 $EF_{local}$ is the local emission factor, $EF_{euro}(V)$ and $EF_{euro}(SDC)$ are the EMEP/EEA emission factor the speed of V and the average urban driving speed SDC, respectively.
 
 The scaled behavior of EF can be verified graphically when we plot the $EF_{local}$, $EF_{scaled}(V)$, and the $EF_{euro}(V)$ that is used as the base. It can be done in five steps:
@@ -214,8 +214,8 @@ Users can go in detail into the emission factor database that is being used by t
 - `data(ef_usa_emfac)` from California Air Resources Board (EMFAC Model)
 - `data(ef_europe_emep)` from European Environment Agency (EMEP/EEA)
 
-The data presented in the agencies website and software was downloaded and pre-processed
-in `gtfs2emis` in order to be easily read by the emission factor functions. Users can also access the scripts used to the process raw data in the [gtfs2emis GitHub repository]("https://github.com/ipeaGIT/gtfs2emis/tree/master/data-raw"). 
+The data presented on the agencies website and software was downloaded and pre-processed
+in `gtfs2emis` to be easily read by the emission factor functions. Users can also access the scripts used to process raw data in the [gtfs2emis GitHub repository]("https://github.com/ipeaGIT/gtfs2emis/tree/master/data-raw"). 
 
 ## Report a bug
 
